[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/tiles/suelos.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Jugador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Nivel1.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Pajaro.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/CamaraNivel1.gd" type="Script" id=5]
[ext_resource path="res://Sprites/tiles and background_foreground (new)/background.png" type="Texture" id=6]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemigo.tscn" type="PackedScene" id=8]
[ext_resource path="res://SFX/theme-5.ogg" type="AudioStream" id=9]
[ext_resource path="res://SFX/Mysterious_Woods-Zelda.ogg" type="AudioStream" id=10]
[ext_resource path="res://Scenes/GameOverScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/WinScreen.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 114.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 439.5, 10 )

[sub_resource type="Animation" id=3]
resource_name = "Entrada"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Jugador:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -14, -115 ), Vector2( 68, 56 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Jugador:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -14, -115 ) ]
}

[node name="Nivel" type="Node2D"]
script = ExtResource( 3 )

[node name="InvisibleComponents" type="Node2D" parent="."]
position = Vector2( 0, 22 )

[node name="LeftLimitWall" type="StaticBody2D" parent="InvisibleComponents"]
position = Vector2( -9, -12 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleComponents/LeftLimitWall"]
shape = SubResource( 2 )

[node name="DeathArea" type="Node2D" parent="InvisibleComponents"]
position = Vector2( 146, 0 )

[node name="Area2D" type="Area2D" parent="InvisibleComponents/DeathArea"]
position = Vector2( 790, 81 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleComponents/DeathArea/Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="InvisibleComponents/DeathArea"]
position = Vector2( -242, 82 )
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleComponents/DeathArea/Area2D2"]
position = Vector2( 204.5, 0 )
shape = SubResource( 1 )

[node name="Suelo" type="TileMap" parent="."]
position = Vector2( 1, -32 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131098, 3, 0, 131099, 3, 1, 131100, 3, 1, 131101, 3, 1, 131102, 3, 2, 196634, 3, 65536, 196635, 3, 65537, 196636, 3, 65537, 196637, 3, 65537, 196638, 3, 65538, 196645, 1, 2, 262168, 3, 0, 262169, 3, 1, 262170, 10, 131074, 262171, 3, 65537, 262172, 3, 65537, 262173, 3, 65537, 262174, 3, 65538, 327688, 13, 0, 327691, 16, 0, 327692, 16, 0, 327693, 16, 0, 327704, 3, 65536, 327705, 3, 65537, 327706, 3, 65537, 327707, 3, 65537, 327708, 3, 65537, 327709, 3, 65537, 327710, 3, 65538, 327712, 14, 0, 327713, 3, 0, 327714, 3, 1, 327715, 3, 1, 327716, 3, 1, 327717, 3, 1, 327718, 3, 1, 327719, 3, 2, 327724, 4, 65538, 393216, 3, 0, 393217, 3, 1, 393218, 3, 1, 393219, 3, 1, 393220, 3, 1, 393221, 3, 1, 393222, 3, 1, 393223, 3, 1, 393224, 3, 1, 393225, 3, 1, 393226, 3, 1, 393227, 3, 1, 393228, 3, 1, 393229, 3, 1, 393230, 3, 1, 393231, 3, 1, 393232, 3, 1, 393233, 3, 1, 393234, 3, 2, 393238, 3, 0, 393239, 3, 1, 393240, 10, 131074, 393241, 3, 65537, 393242, 3, 65537, 393243, 3, 65537, 393244, 3, 65537, 393245, 3, 65537, 393246, 10, 131072, 393247, 3, 1, 393248, 3, 1, 393249, 10, 131074, 393250, 3, 65537, 393251, 3, 65537, 393252, 3, 65537, 393253, 3, 65537, 393254, 3, 65537, 393255, 3, 65538, 393257, 2, 1, 393258, 2, 1, 393259, 2, 1, 393260, 2, 1, 393261, 2, 1, 393262, 2, 1, 393263, 2, 2, 458752, 3, 65536, 458753, 3, 65537, 458754, 3, 65537, 458755, 3, 65537, 458756, 3, 65537, 458757, 3, 65537, 458758, 3, 65537, 458759, 3, 65537, 458760, 3, 65537, 458761, 3, 65537, 458762, 3, 65537, 458763, 3, 65537, 458764, 3, 65537, 458765, 3, 65537, 458766, 3, 65537, 458767, 3, 65537, 458768, 3, 65537, 458769, 3, 65537, 458770, 3, 65538, 458774, 3, 65536, 458775, 3, 65537, 458776, 3, 65537, 458777, 3, 65537, 458778, 3, 65537, 458779, 3, 65537, 458780, 3, 65537, 458781, 3, 65537, 458782, 3, 65537, 458783, 3, 65537, 458784, 3, 65537, 458785, 3, 65537, 458786, 3, 65537, 458787, 3, 65537, 458788, 3, 65537, 458789, 3, 65537, 458790, 3, 65537, 458791, 3, 65538, 458793, 2, 65537, 458794, 2, 65537, 458795, 2, 65537, 458796, 2, 65537, 458797, 2, 65537, 458798, 2, 65537, 458799, 2, 65538, 524288, 3, 65536, 524289, 3, 65537, 524290, 3, 65537, 524291, 3, 65537, 524292, 3, 65537, 524293, 3, 65537, 524294, 3, 65537, 524295, 3, 65537, 524296, 3, 65537, 524297, 3, 65537, 524298, 3, 65537, 524299, 3, 65537, 524300, 3, 65537, 524301, 3, 65537, 524302, 3, 65537, 524303, 3, 65537, 524304, 3, 65537, 524305, 3, 65537, 524306, 3, 65538, 524310, 3, 65536, 524311, 3, 65537, 524312, 3, 65537, 524313, 3, 65537, 524314, 3, 65537, 524315, 3, 65537, 524316, 3, 65537, 524317, 3, 65537, 524318, 3, 65537, 524319, 3, 65537, 524320, 3, 65537, 524321, 3, 65537, 524322, 3, 65537, 524323, 3, 65537, 524324, 3, 65537, 524325, 3, 65537, 524326, 3, 65537, 524327, 3, 65538, 524329, 2, 65537, 524330, 2, 65537, 524331, 2, 65537, 524332, 2, 65537, 524333, 2, 65537, 524334, 2, 65537, 524335, 2, 65538, 589825, 4, 65537, 589826, 4, 65537, 589827, 4, 65537, 589828, 4, 65537, 589829, 4, 65537, 589830, 4, 65537, 589831, 4, 65537, 589832, 4, 65537, 589833, 4, 65537, 589834, 4, 65537, 589835, 4, 65537, 589836, 4, 65537, 589837, 4, 65537, 589838, 4, 65537, 589866, 2, 65537, 589867, 2, 65537, 589868, 2, 65537, 589869, 2, 65537, 589870, 2, 65537, 589871, 2, 65538, 655360, 4, 65536, 655361, 4, 65537, 655362, 4, 65537, 655363, 4, 65537, 655364, 4, 65537, 655365, 4, 65537, 655366, 4, 65537, 655367, 4, 65537, 655368, 4, 65537, 655369, 4, 65537, 655370, 4, 65537, 655371, 4, 65537, 655372, 4, 65537, 655373, 4, 65537, 655374, 4, 65537, 655375, 4, 65537, 655376, 4, 65537, 655377, 4, 65537, 655378, 4, 65538, 655401, 2, 65537, 655402, 2, 65537, 655403, 2, 65537, 655404, 2, 65537, 655405, 2, 65537, 655406, 2, 65537, 655407, 2, 65538, 720896, 4, 65536, 720897, 4, 65537, 720898, 4, 65537, 720899, 4, 65537, 720900, 4, 65537, 720901, 4, 65537, 720902, 4, 65537, 720903, 4, 65537, 720904, 4, 65537, 720905, 4, 65537, 720906, 4, 65537, 720907, 4, 65537, 720908, 4, 65537, 720909, 4, 65537, 720910, 4, 65537, 720911, 4, 65537, 720912, 4, 65537, 720913, 4, 65537, 720914, 4, 65537 )

[node name="Plataformas2" type="TileMap" parent="."]
position = Vector2( -5, -3 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65487, 13, 0, 15, 9, 0, 16, 9, 1, 17, 9, 2, 48, 9, 0, 49, 9, 1, 50, 9, 1, 51, 9, 1, 52, 9, 2, 131081, 9, 0, 131082, 9, 1, 131083, 9, 1, 131084, 9, 2, 131115, 9, 0, 131116, 9, 2, 262200, 9, 0, 262201, 9, 1, 262202, 9, 1, 262203, 9, 1, 262204, 9, 1, 262205, 9, 1, 262206, 9, 1, 262207, 9, 1, 262208, 9, 1, 262209, 9, 1, 262210, 9, 2 )

[node name="NPCs" type="Node2D" parent="."]

[node name="Enemigos" type="Node2D" parent="NPCs"]

[node name="Enemigo" parent="NPCs/Enemigos" instance=ExtResource( 8 )]
position = Vector2( 111, 50 )

[node name="Enemigo2" parent="NPCs/Enemigos" instance=ExtResource( 8 )]
position = Vector2( 168, 21 )

[node name="Enemigo3" parent="NPCs/Enemigos" instance=ExtResource( 8 )]
position = Vector2( 436, -9 )

[node name="Enemigo4" parent="NPCs/Enemigos" instance=ExtResource( 8 )]
position = Vector2( 695, 16 )

[node name="Enemigo5" parent="NPCs/Enemigos" instance=ExtResource( 8 )]
position = Vector2( 1054, 52 )

[node name="Enemigo6" parent="NPCs/Enemigos" instance=ExtResource( 8 )]
position = Vector2( 1037, 52 )

[node name="Mobs" type="Node2D" parent="NPCs"]

[node name="Pajaro" parent="NPCs/Mobs" instance=ExtResource( 4 )]
posicionSpawn = Vector2( 186, 60 )

[node name="Pajaro2" parent="NPCs/Mobs" instance=ExtResource( 4 )]
posicionSpawn = Vector2( 198, 60 )

[node name="Pajaro3" parent="NPCs/Mobs" instance=ExtResource( 4 )]
posicionSpawn = Vector2( 220, 60 )

[node name="Jugador" parent="." instance=ExtResource( 2 )]
position = Vector2( 68, 56 )

[node name="CamaraNivel" type="Camera2D" parent="."]
position = Vector2( 0, 25 )
current = true
drag_margin_v_enabled = true
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="CamaraNivel"]
position = Vector2( -2.27374e-13, 1.90735e-06 )
scale = Vector2( 0.958333, 0.775 )
z_index = -10
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Entrada = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="PosicionSpawn" type="Position2D" parent="."]
position = Vector2( -193, 203 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="WinScreen" parent="CanvasLayer" instance=ExtResource( 12 )]
show_behind_parent = true
margin_left = -229.0
margin_top = 0.0
margin_right = -229.0
margin_bottom = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="body_entered" from="InvisibleComponents/DeathArea/Area2D" to="." method="playerEnterDeathZone"]
[connection signal="body_entered" from="InvisibleComponents/DeathArea/Area2D2" to="." method="playerEnterDeathZone"]
[connection signal="hasDied" from="NPCs/Enemigos/Enemigo" to="." method="_on_Enemigo_hasDied"]
[connection signal="has_been_damaged" from="NPCs/Enemigos/Enemigo" to="." method="_on_Enemigo_has_been_damaged"]
[connection signal="hasDied" from="NPCs/Enemigos/Enemigo2" to="." method="_on_Enemigo_hasDied"]
[connection signal="has_been_damaged" from="NPCs/Enemigos/Enemigo2" to="." method="_on_Enemigo_has_been_damaged"]
[connection signal="hasDied" from="NPCs/Enemigos/Enemigo3" to="." method="_on_Enemigo_hasDied"]
[connection signal="has_been_damaged" from="NPCs/Enemigos/Enemigo3" to="." method="_on_Enemigo_has_been_damaged"]
[connection signal="hasDied" from="NPCs/Enemigos/Enemigo4" to="." method="_on_Enemigo_hasDied"]
[connection signal="has_been_damaged" from="NPCs/Enemigos/Enemigo4" to="." method="_on_Enemigo_has_been_damaged"]
[connection signal="hasDied" from="NPCs/Enemigos/Enemigo5" to="." method="_on_Enemigo_hasDied"]
[connection signal="has_been_damaged" from="NPCs/Enemigos/Enemigo5" to="." method="_on_Enemigo_has_been_damaged"]
[connection signal="hasDied" from="NPCs/Enemigos/Enemigo6" to="." method="_on_Enemigo_hasDied"]
[connection signal="has_been_damaged" from="NPCs/Enemigos/Enemigo6" to="." method="_on_Enemigo_has_been_damaged"]
[connection signal="hasDead" from="Jugador" to="." method="_on_Jugador_hasDead"]
[connection signal="has_been_damaged" from="Jugador" to="." method="_on_Jugador_has_been_damaged"]
